# crypto-web-scraper

./: CMakeLists.txt  LICENSE  README.md  curlobj.cpp  curlobj.h  data.cpp  data.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  worker.cpp  worker.h
